PROJECT(simple-qt)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0 FATAL_ERROR)
INCLUDE(../../../cmake/commonconf.cmake)

MESSAGE(STATUS "Configuring Simple-Qt Application")

SET(VRN_SIMPLEQT_SOURCES
    simple-qt.cpp
)

SET(VRN_SIMPLEQT_HEADERS 
)

# find Qt library
FIND_PACKAGE(Qt4 ${VRN_REQUIRED_QT_VERSION} REQUIRED QtCore QtGui QtOpenGL)

# Qt moc (currently not required)
#QT4_WRAP_CPP(VRN_SIMPLEQT_MOC_SOURCES ${VRN_SIMPLEQT_HEADERS})
#LIST(APPEND VRN_SIMPLEQT_SOURCES ${VRN_SIMPLEQT_MOC_SOURCES})
    
ADD_EXECUTABLE(simple-qt 
    ${VRN_SIMPLEQT_SOURCES} ${VRN_SIMPLEQT_HEADERS} 
) 
ADD_DEFINITIONS(${VRN_DEFINITIONS} ${VRN_MODULE_DEFINITIONS})
INCLUDE_DIRECTORIES(${VRN_INCLUDE_DIRECTORIES} ${VRN_MODULE_INCLUDE_DIRECTORIES})
TARGET_LINK_LIBRARIES(simple-qt tgt voreen_core voreen_qt ${VRN_EXTERNAL_LIBRARIES})

# add Qt dependency
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
TARGET_LINK_LIBRARIES(simple-qt ${QT_LIBRARIES})
