PROJECT(processorinittest)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0 FATAL_ERROR)
INCLUDE(../../../cmake/commonconf.cmake)

MESSAGE(STATUS "Configuring ProcessorInitTest Application")

SET(VRN_SIMPLEMEMCHECKINIT_SOURCES
    processorinittest.cpp
    ${VRN_HOME}/ext/tgt/glut/glutcanvas.cpp
    ${VRN_HOME}/ext/tgt/glut/glutmouse.cpp
)

SET(VRN_SIMPLEMEMCHECKINIT_HEADERS
    ${VRN_HOME}/ext/tgt/glut/glutcanvas.h
    ${VRN_HOME}/ext/tgt/glut/glutmouse.h
)

# find GLUT library
FIND_PACKAGE(GlutVRN REQUIRED)
IF(GLUT_FOUND)
    MESSAGE(STATUS "* Found GLUT")
    IF(WIN32)
        SET(VRN_EXTERNAL_DEBUG_DLLS ${VRN_EXTERNAL_DEBUG_DLLS} ${GLUT_DEBUG_DLL} PARENT_SCOPE)
        SET(VRN_EXTERNAL_RELEASE_DLLS ${VRN_EXTERNAL_RELEASE_DLLS} ${GLUT_RELEASE_DLL} PARENT_SCOPE)      
    ENDIF()
ELSE()
    MESSAGE(FATAL_ERROR "GLUT not found!")
ENDIF()

ADD_EXECUTABLE(processorinittest
    ${VRN_SIMPLEMEMCHECKINIT_SOURCES} 
    ${VRN_SIMPLEMEMCHECKINIT_HEADERS} 
) 
ADD_DEFINITIONS(${VRN_DEFINITIONS} ${VRN_MODULE_DEFINITIONS} ${GLUT_DEFINITIONS})
INCLUDE_DIRECTORIES(${VRN_INCLUDE_DIRECTORIES} ${VRN_MODULE_INCLUDE_DIRECTORIES} ${GLUT_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(processorinittest tgt voreen_core ${VRN_EXTERNAL_LIBRARIES} ${GLUT_LIBRARIES})
